# git_veil

./: .gitattributes  .gitignore  ADVANCED.md  AGENTS.md  AUTOMATED_DECISION_FORK_TESTS.md  COMMAND_DECISION_TREE.md  COPYWRITER_CONTEXT.md  DETERMINISTIC_ENCRYPTION_VALIDATION.md  DEVELOPMENT.md  INSTALL.md  LICENSE  MANUAL_TEST_MATRIX.md  README.md  TEST_RESULTS_LOG.md  TEST_RESULTS_SUMMARY.md  build_release.sh  demo_ascon.exs  encrypt_real_file.exs  git-foil  install-dev.sh  install.sh  mix.exs  run_tests.sh  test_chacha20_quick.exs  test_deterministic_encryption.exs  test_schwaemm_quick.exs  test_secret.env
docs/: ADR-001-triple-layer-quantum-resistant-encryption.md  ADR-003-six-layer-maximum-quantum-resistance.md  AI_AGENT_CONTRIBUTOR_REMOVAL.md  MULTI_USER_SETUP.md  README.md  REFACTORING_LOG.md  REMOVE_AI_CONTRIBUTOR.md  TESTING_GUIDE.md  encrypted_add_tuning.md
docs/build_log/: git_foil_concurrency_log.md
docs/development/: ADVANCED.md  COPYWRITER_CONTEXT.md
docs/testing/: COMMAND_DECISION_TREE.md  DETERMINISTIC_ENCRYPTION_VALIDATION.md  MANUAL_TEST_MATRIX.md  TEST_RESULTS_LOG.md
lib/git_foil/: application.ex  cli.ex
lib/git_veil/: application.ex  cli.ex
native/aegis_nif/: Cargo.toml
native/ascon_nif/: .gitignore  Cargo.toml
native/ascon_nif/src/: lib.rs
native/chacha20poly1305_nif/: Cargo.toml
native/schwaemm_nif/: Cargo.toml
native/schwaemm_nif/src/: lib.rs  schwaemm.rs  schwaemm_v2.rs  sparkle.rs
scripts/: README.md  release.sh  test_deterministic_encryption.exs  test_schwaemm_quick.exs
test/: test_helper.exs
(+140 files in other folders)
